# rasp-pi4-AI

./: .env  CMakeLists.txt  build.sh  check_camera.sh  check_oled.sh  check_resources.sh  fix_camera.sh  get_url.sh  setup.sh  test_cam_capture.py
src/: Config.hpp  Logger.hpp  MjpegServer.cpp  MjpegServer.hpp  OcrEngine.cpp  OcrEngine.hpp  OledDisplay.cpp  OledDisplay.hpp  main.cpp
